llm-d/inventory/mycluster/manifests/llm-d/vllm-backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-backend-route
  namespace: llm-d-system
spec:
  parentRefs:
    - name: llm-d-infra-inference-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - group: ""
          kind: Service
          name: vllm-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - group: ""
          kind: Service
          name: vllm-backend
          port: 8000
